webadmin: fix missing grid column header borders
Fix missing grid column header borders in firefox.
The background-image gradient was covering the border,
but it wasn't working anyway, so just remove it.

Bug-Url: https://bugzilla.redhat.com/1483863

--- a/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
+++ b/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
@@ -5,26 +5,25 @@
 }
 
 .cellTableHeader {
-    padding: 0px 0px 0px 4px;
+    padding: 0 0 0 4px;
     text-align: left;
-    background-image: linear-gradient(to bottom, #fafafa 0, #ededed 100%);
     height: 27px;
     line-height: 28px;
     white-space: nowrap;
     position: relative;
-    border-top: 0 solid #d1d1d1;
-    border-bottom: 0 solid #d1d1d1;
+    border-top: 0;
+    border-bottom: 0;
     border-left: 1px solid #d1d1d1;
-    border-right: 0 solid #d1d1d1;
+    border-right: 0;
 }
 
 .cellTableCell {
-    padding: 0px 4px 0px 4px;
+    padding: 0 4px 0 4px;
     height: 26px !important;
     border-top: 1px solid #d1d1d1;
-    border-bottom: 0 solid #d1d1d1;
+    border-bottom: 0;
     border-left: 1px solid #d1d1d1;
-    border-right: 0 solid #d1d1d1;
+    border-right: 0;
     white-space: nowrap;
     cursor: pointer;
 }
@@ -72,7 +71,7 @@
 
 .cellTableFirstColumn {
     padding-left: 3px;
-    border-left: 0 solid #d1d1d1;
+    border-left: 0;
 }
 
 .cellTableLastColumn {
@@ -80,9 +79,9 @@
 
 .cellTableFirstColumnHeader {
     padding-left: 4px;
-    border-left: 0 solid #D1D1D1;
+    border-left: 0;
 }
 
 .cellTableLastColumnHeader {
-    border-right: 0 solid #D1D1D1;
+    border-right: 0;
 }
